add : payment gateway midtrans

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
   <!-- App -->
   <script src="src/app.js" async></script>
 
+  <!-- Midtrans -->
+  <script type="text/javascript"
+  src="https://app.sandbox.midtrans.com/snap/snap.js"
+  data-client-key="SB-Mid-client-8l3bJ9A56V2dXbv-"></script>
+
   <!-- My Style -->
   <link rel="stylesheet" href="css/style.css">
 </head>
